--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/public/index.html">
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta http-equiv="refresh" content="0; url=https://repo.github.io/public/index.html">
+</head>
+</html>
