--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url=public/index.html">
+  <meta http-equiv="refresh" content="0; url=https://github.com/sintheia100/chalkboard/public/index.html">
 </head>
 </html>
