--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
@@ -10,3 +10,4 @@
         follow the <a href="public/index.html">link to the documentation</a>
     </body>
 </html>
+ -->
